Bug 441610 - Hiding/minimizing, then showing a konsole window, makes it revert to its default size
Summary: Hiding/minimizing, then showing a konsole window, makes it revert to its defa...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 442388 442492 443212 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-27 14:30 UTC by Shawn Rutledge
Modified: 2021-10-04 20:48 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Shawn Rutledge 2021-08-27 14:30:16 UTC
SUMMARY
when switching virtual desktops on OpenBox, konsole windows revert to their default sizes

STEPS TO REPRODUCE
1. open a konsole window
2. resize it
3. switch to a different virtual desktop
4. switch back

OBSERVED RESULT
konsole window will now be the same size as configured in General | Initial terminal size

EXPECTED RESULT
stay the same as it was resized to

SOFTWARE/OS VERSIONS
Arch Linux, running openbox, not plasma desktop
KDE Plasma Version: plasma-integration 5.22.4-1 plasma-workspace 5.22.4-3
KDE Frameworks Version: plasma-framework 5.85.0-2
Qt Version: 6.1.2

ADDITIONAL INFORMATION
seems to be a new bug, just started happening after pacman -Syu

[zen][16:26:20] pacman -Ss plasma |grep installed
extra/breeze 5.22.4-1 (plasma) [installed]
extra/kactivitymanagerd 5.22.4-1 (plasma) [installed]
extra/kde-cli-tools 5.22.4-1 (plasma) [installed]
extra/kdecoration 5.22.4-1 (plasma) [installed]
extra/kscreenlocker 5.22.4-1 (plasma) [installed]
extra/ksystemstats 5.22.4-1 (plasma) [installed]
extra/kwayland-server 5.22.4-1 (plasma) [installed]
extra/kwin 5.22.4-1 (plasma) [installed]
extra/layer-shell-qt 5.22.4-1 (plasma) [installed]
extra/libkscreen 5.22.4-1 (plasma) [installed]
extra/libksysguard 5.22.4-1 (plasma) [installed]
extra/milou 5.22.4-1 (plasma) [installed]
extra/plasma-framework 5.85.0-2 (kf5) [installed]
extra/plasma-integration 5.22.4-1 (plasma) [installed]
extra/plasma-workspace 5.22.4-3 (plasma) [installed]

[zen][16:27:58] pacman -Ss kf5 |grep installed
extra/attica 5.85.0-1 (kf5) [installed]
extra/baloo 5.85.0-1 (kf5) [installed]
extra/breeze-icons 5.85.0-1 (kf5) [installed]
extra/extra-cmake-modules 5.85.0-1 (kf5) [installed]
extra/frameworkintegration 5.85.0-1 (kf5) [installed]
extra/kactivities 5.85.0-1 (kf5) [installed]
extra/kactivities-stats 5.85.0-1 (kf5) [installed]
extra/karchive 5.85.0-1 (kf5) [installed]
extra/kauth 5.85.0-1 (kf5) [installed]
extra/kbookmarks 5.85.0-1 (kf5) [installed]
extra/kcmutils 5.85.0-1 (kf5) [installed]
extra/kcodecs 5.85.0-1 (kf5) [installed]
extra/kcompletion 5.85.0-1 (kf5) [installed]
extra/kconfig 5.85.0-1 (kf5) [installed]
extra/kconfigwidgets 5.85.0-1 (kf5) [installed]
extra/kcoreaddons 5.85.0-1 (kf5) [installed]
extra/kcrash 5.85.0-1 (kf5) [installed]
extra/kdbusaddons 5.85.0-1 (kf5) [installed]
extra/kdeclarative 5.85.0-1 (kf5) [installed]
extra/kded 5.85.0-1 (kf5) [installed]
extra/kdelibs4support 5.85.0-1 (kf5-aids) [installed]
extra/kdesu 5.85.0-1 (kf5) [installed]
extra/kdnssd 5.85.0-1 (kf5) [installed]
extra/kemoticons 5.85.0-1 (kf5) [installed]
extra/kfilemetadata 5.85.0-1 (kf5) [installed]
extra/kglobalaccel 5.85.0-1 (kf5) [installed]
extra/kguiaddons 5.85.0-1 (kf5) [installed]
extra/kholidays 1:5.85.0-1 (kf5) [installed]
extra/ki18n 5.85.0-1 (kf5) [installed]
extra/kiconthemes 5.85.0-1 (kf5) [installed]
extra/kidletime 5.85.0-1 (kf5) [installed]
extra/kinit 5.85.0-1 (kf5) [installed]
extra/kio 5.85.0-1 (kf5) [installed]
extra/kirigami2 5.85.0-1 (kf5) [installed]
extra/kitemmodels 5.85.0-1 (kf5) [installed]
extra/kitemviews 5.85.0-1 (kf5) [installed]
extra/kjobwidgets 5.85.0-1 (kf5) [installed]
extra/knewstuff 5.85.0-1 (kf5) [installed]
extra/knotifications 5.85.0-1 (kf5) [installed]
extra/knotifyconfig 5.85.0-1 (kf5) [installed]
extra/kpackage 5.85.0-1 (kf5) [installed]
extra/kparts 5.85.0-1 (kf5) [installed]
extra/kpeople 5.85.0-1 (kf5) [installed]
extra/kpty 5.85.0-1 (kf5) [installed]
extra/kquickcharts 5.85.0-1 (kf5) [installed]
extra/krunner 5.85.0-1 (kf5) [installed]
extra/kservice 5.85.0-1 (kf5) [installed]
extra/ktexteditor 5.85.0-1 (kf5) [installed]
extra/ktextwidgets 5.85.0-1 (kf5) [installed]
extra/kunitconversion 5.85.0-1 (kf5) [installed]
extra/kwallet 5.85.0-1 (kf5) [installed]
extra/kwayland 5.85.0-1 (kf5) [installed]
extra/kwidgetsaddons 5.85.0-1 (kf5) [installed]
extra/kwindowsystem 5.85.0-1 (kf5) [installed]
extra/kxmlgui 5.85.0-1 (kf5) [installed]
extra/oxygen-icons 1:5.85.0-1 (kf5) [installed]
extra/plasma-framework 5.85.0-2 (kf5) [installed]
extra/prison 5.85.0-1 (kf5) [installed]
extra/purpose 5.85.0-1 (kf5) [installed]
extra/qqc2-desktop-style 5.85.0-1 (kf5) [installed]
extra/solid 5.85.0-1 (kf5) [installed]
extra/sonnet 5.85.0-1 (kf5) [installed]
extra/syndication 5.85.0-1 (kf5) [installed]
extra/syntax-highlighting 5.85.0-1 (kf5) [installed]
extra/threadweaver 5.85.0-1 (kf5) [installed]
Comment 1 Ahmad Samir 2021-08-27 14:39:10 UTC
I'll see if can reproduce this issue (and I hope it's not Qt6 related (as I see in the report you're running Qt6), because I am still on Qt5 :)).
Comment 2 Bug Janitor Service 2021-08-27 18:03:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/467
Comment 3 Kurt Hindenburg 2021-08-31 22:11:44 UTC
Git commit 68f1505d5f6ffe6406a48732a76dbc43ff88f352 by Kurt Hindenburg, on behalf of Ahmad Samir.
Committed on 31/08/2021 at 21:04.
Pushed by hindenburg into branch 'master'.

Don't resize window when switching virtual desktops in OpenBox

It looks like switching virtual desktops in OpenBox invokes a show event
(this doesn't happen while running Plasma).

The code in MainWindow::showEvent() should only be run once on first show,
so guard it with a bool member.
FIXED-IN: 21.08.1

M  +11   -12   src/MainWindow.cpp
M  +1    -1    src/MainWindow.h

https://invent.kde.org/utilities/konsole/commit/68f1505d5f6ffe6406a48732a76dbc43ff88f352
Comment 4 Kurt Hindenburg 2021-08-31 22:29:13 UTC
Git commit ff23400350900e56f3c1a9c08a70f1c508b63853 by Kurt Hindenburg, on behalf of Ahmad Samir.
Committed on 31/08/2021 at 22:24.
Pushed by hindenburg into branch 'release/21.08'.

Don't resize window when switching virtual desktops in OpenBox

It looks like switching virtual desktops in OpenBox invokes a show event
(this doesn't happen while running Plasma).

The code in MainWindow::showEvent() should only be run once on first show,
so guard it with a bool member.
FIXED-IN: 21.08.1
(cherry picked from commit 68f1505d5f6ffe6406a48732a76dbc43ff88f352)

M  +11   -12   src/MainWindow.cpp
M  +1    -1    src/MainWindow.h

https://invent.kde.org/utilities/konsole/commit/ff23400350900e56f3c1a9c08a70f1c508b63853
Comment 5 Ahmad Samir 2021-09-13 17:10:16 UTC
*** Bug 442388 has been marked as a duplicate of this bug. ***
Comment 6 Michael Konieczny 2021-09-13 17:17:02 UTC
Bug 442388 was marked as duplicate, and it mainly is, but there's one more detail - restored size depends on selected toolbars, with screen recording how it looks like. And no OpenBox, just Plasma.
Comment 7 Ahmad Samir 2021-09-13 17:46:05 UTC
It's the same bug, depends on when a showevent is invoked.

As for the toolbars, that is due to the too-long text on them, try hiding the text.
Comment 8 Michael Konieczny 2021-09-13 17:52:34 UTC
> As for the toolbars, that is due to the too-long text on them, try hiding the text.

I can hide text, I can disable toolbars completely, but when before mimimization there was some layout, even with ellipsized toolbars, it should be retained on restore.
Comment 9 Ahmad Samir 2021-09-13 17:58:33 UTC
They are two separate issues, the window is resized when it's minimized then shown; and the toolbars interfere with the window size hint (IIRC).
Comment 10 nsprangers@gmail.com 2021-09-13 23:31:53 UTC
(In reply to Michael Konieczny from comment #8)
> I can hide text, I can disable toolbars completely, but when before
> mimimization there was some layout, even with ellipsized toolbars, it should
> be retained on restore.

It's the same bug. I just built 21.08 from git and it's fixed, so I think that means it should hit 21.08.2.

https://community.kde.org/Schedules/KDE_Gear_21.08_Schedule
Comment 11 Ahmad Samir 2021-09-15 20:56:55 UTC
*** Bug 442492 has been marked as a duplicate of this bug. ***
Comment 12 Ahmad Samir 2021-10-02 09:41:16 UTC
*** Bug 443212 has been marked as a duplicate of this bug. ***
Comment 13 Ahmad Samir 2021-10-02 09:41:55 UTC
The fix didn't catch the 21.08.1 tagging, so it's actually in 21.08.2.
Comment 14 Shawn Rutledge 2021-10-04 20:48:55 UTC
Thanks for the fix.  I downgraded to 21.04 for now; I hope this really shows up soonish in an Arch packagae.